--- a/webproject/index.html
+++ b/webproject/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script type="text/javascript" src="/dist/build.js"></script>
+    <script type="text/javascript" src="src/assets/js/theme/jquery.min.js"></script>
+    <script type="text/javascript" src="src/assets/js/theme/skel.min.js"></script>
+    <script type="text/javascript" src="src/assets/js/theme/util.js"></script>
+    <!--if lte IE 8script(src='src/assets/js/theme/ie/respond.min.js')-->
+    <script type="text/javascript" src="src/assets/js/theme/main.js"></script>
   </body>
 </html>
