--- a/webproject/index.html
+++ b/webproject/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>webproject</title>
     <link rel="stylesheet" type="text/css" href="src/assets/css/main.css">
   </head>
