Procurando problema nas rotas do dashboard

--- a/webproject/index.html
+++ b/webproject/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>webproject</title>
-    <link rel="stylesheet" type="text/css" href="src/assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/src/assets/css/main.css">
   </head>
   <body>
     <div id="app"></div>
 
     <script type="text/javascript" src="/dist/build.js"></script>
 
-    <script type="text/javascript" src="src/assets/js/theme/jquery.min.js"></script>
-    <script type="text/javascript" src="src/assets/js/theme/skel.min.js"></script>
-    <script type="text/javascript" src="src/assets/js/theme/util.js"></script>
+    <script type="text/javascript" src="/src/assets/js/theme/jquery.min.js"></script>
+    <script type="text/javascript" src="/src/assets/js/theme/skel.min.js"></script>
+    <script type="text/javascript" src="/src/assets/js/theme/util.js"></script>
     <!--if lte IE 8script(src='src/assets/js/theme/ie/respond.min.js')-->
-    <script type="text/javascript" src="src/assets/js/theme/main.js"></script>
+    <script type="text/javascript" src="/src/assets/js/theme/main.js"></script>
   </body>
 </html>
